--- a/FoodPrepers/Client/Shared/NavMenu.razor
+++ b/FoodPrepers/Client/Shared/NavMenu.razor
@@ -44,8 +44,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="foods">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Foods
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="mealplans">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> MealPlans
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="meals">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Meals
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="nutritionfacts">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> NutritionFacts
             </NavLink>
         </li>
     </ul>
