--- a/FoodPrepers/Client/_Imports.razor
+++ b/FoodPrepers/Client/_Imports.razor
@@ -9,3 +9,7 @@
 @using Microsoft.JSInterop
 @using FoodPrepers.Client
 @using FoodPrepers.Client.Shared
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using FoodPrepers.Shared.Domain
+@using FoodPrepers.Client.Static
