--- a/FoodPrepers/Client/Shared/NavMenu.razor
+++ b/FoodPrepers/Client/Shared/NavMenu.razor
@@ -63,6 +63,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> NutritionFacts
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="mealfoods">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> MealFoods
+            </NavLink>
+        </li>
     </ul>
 </div>
 
